# minibro

./: .gitignore  AUTOMATION_STRATEGY.md  DOCK_BOUNCE_ISSUE.md  README.md  package.json  pnpm-lock.yaml
scripts/: build_sidecar.sh
src/: App.vue
src-agent/: Cargo.toml
src-agent/src/: agent.rs  browser.rs  events.rs  lib.rs  llm.rs
src-python/: main.py  pyproject.toml  python-sidecar.spec
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: dump_tree.rs  press_notification.rs  read_notifications.rs  watch_notifications.rs
src-tauri/icons/: tray-alert.rgba  tray-done.rgba  tray-running.rgba
src-tauri/src/: lib.rs  main.rs  notifications.rs
