[package]
name = "agent"
version = "0.1.0"
edition = "2021"
description = "UI-agnostic browser-agent core for minibro (agent-browser driver + OpenAI/MLX loop)"

[lib]
name = "agent"
path = "src/lib.rs"

# Terminal harness to exercise the loop without Tauri (stdout NDJSON + stdin HITL).
[[bin]]
name = "agent-cli"
path = "src/bin/cli.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-std", "io-util", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
